/*
 * Copyright 2017-present Open Networking Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.onosproject.grpc.net.meter.models";

package net.meter;

import "net/meter/BandProto.proto";
import "net/meter/MeterEnumsProto.proto";
import "core/ApplicationIdProto.proto";

message MeterProto {
    string device_id = 1;
    uint64 meter_id = 2;
    core.ApplicationIdProto application_id = 3;
    MeterUnitProto unit = 4;
    bool is_burst = 5;
    repeated BandProto bands = 6;
    MeterStateProto state = 7;
    uint64 life = 8;
    uint64 reference_count = 9;
    uint64 packets_seen = 10;
    uint64 bytes_seen = 11;
}